fixed scaling on smaller screens

--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ header {
 }
 
 #nav {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 30%;
+    margin-right: 30%;
     width: 40%;
     padding: 0;
     text-align: center;
@@ -73,8 +73,8 @@ li a:hover {
 
 .box {
     background-color: #202432;
-    margin-left: 200;
-    margin-right: 200;
+    margin-left: 15%;
+    margin-right: 15%;
     margin-top: 50;
     margin-bottom: 50;
     padding-top: 60;
